--- a/attempt_two.ipynb
+++ b/attempt_two.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# basic modeling\n",
     "import os\n",
     "import torch\n",
-    "import torchvision\n",
+    "#import torchvision\n",
     "import torch.nn as nn\n",
     "import numpy as np\n",
     "\n",
@@ -37,7 +37,7 @@
     "import torch.optim as optim\n",
     "\n",
     "# Data Cleaning\n",
-    "from torchvision.transforms import ToTensor\n",
+    "#from torchvision.transforms import ToTensor\n",
     "from torch.autograd import Variable # requires_gradient = true\n",
     "from torch.nn import Linear, ReLU, Sequential, Conv2d, MaxPool2d, Module\n",
     "from torch.nn import Softmax, BatchNorm2d, Dropout"
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,20 +58,24 @@
    ],
    "source": [
     "# Directory where data is\n",
-    "data_dir = r'C:\\Users\\dsk02\\Desktop\\python_projects\\torch_dogs\\main_images\\Images'\n",
+    "#laptop\n",
+    "#data_dir = r'C:\\Users\\dsk02\\Desktop\\python_projects\\torch_dogs\\main_images\\Images'\n",
+    "\n",
+    "#gpu comp\n",
+    "data_dir = r'C:\\Users\\Dylan\\Desktop\\GPU_RUN\\StanfordDogsCNN\\images\\Images'\n",
     "print(os.listdir(data_dir))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 120/120 [00:00<?, ?it/s]"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 120/120 [00:00<?, ?it/s]\n"
      ]
     },
     {
@@ -79,13 +83,6 @@
      "output_type": "stream",
      "text": [
       "['chihuahua', 'japanese_spaniel', 'maltese_dog', 'pekinese', 'shih tzu', 'blenheim_spaniel', 'papillon', 'toy_terrier', 'rhodesian_ridgeback', 'afghan_hound', 'basset', 'beagle', 'bloodhound', 'bluetick', 'black and tan_coonhound']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -134,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,21 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 out of 120\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "0it [00:21, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0 out of 120\n",
       "70\n"
      ]
     },
@@ -201,7 +184,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "0it [00:09, ?it/s]\n"
      ]
     },
     {
@@ -210,7 +193,7 @@
        "0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +289,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,9 +408,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -445,7 +468,6 @@
     "\n",
     "# if gpu -> Cuda\n",
     "if torch.cuda.is_available():\n",
-    "    \n",
     "    # push to gpu\n",
     "    model = model.cuda()\n",
     "    criterion = criterion.cuda()\n",
@@ -956,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
